--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   				<form action="/newUser" method="post">
   				  <input type="text" name="isbn" id="isbn" placeholder="Search by ISBN">
   				</form>
+  			<h2> <span>Insert the ISBN of your book and hit the search button.</span></h2>	
+  			<button id="searchButton" onclick="searchBook();"> search </button>
 			</header>
 		</div>
 </div>
@@ -166,9 +168,6 @@
 				<a href="javascript:gotoPage(3);" class="icon-lock">Account</a>
 			</nav>
 		</div><!-- /perspective -->
-		
-		
-		
 		
 		<script src="js/classie.js"></script>
 		<script src="js/menu.js"></script>
