--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@
             <label>
               Email Address<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input id='username' type="email"required autocomplete="off"/>
           </div>
           
           <div class="field-wrap">
             <label>
               Password<span class="req">*</span>
             </label>
-            <input type="password"required autocomplete="off"/>
+            <input id='password' type="password"required autocomplete="off"/>
           </div>
           <p class="forgot"><a href="#">Forgot Password?</a></p>
           
-          <button class="button button-block"/>Log In</button>        
+          <button onclick="loginButtonPressed();" class="button button-block"/>Log In</button>        
           </form>
         </div>  
       </div><!-- tab-content -->
