--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<header class="codrops-header">
 			  <h1>Share a Book</h1>
 				<h1> <span>Share a book with someone here.</span></h1>	
-  				<form action="/newUser" method="post">
+  				<form action="" method="post">
   				  <input type="text" name="isbn" id="isbn" placeholder="Search by ISBN">
   				</form>
   			<h2> <span>Insert the ISBN of your book and hit the search button.</span></h2>	
