--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       			<button id="searchButton" onclick="searchBookinDB();"> search </button>
     			<form action="/newUser" method="post">
     			  <br>
-    			  <input type="text" name="isbnout1" id="isbnout" placeholder="ISBN">
-    				<input type="text" name="title1" id="title" placeholder="Title">
-    				<input type="text" name="summary1" id="summary" placeholder="Summary">
-    				<input type="text" name="author1" id="author" placeholder="Author">
+    			  <input type="text" name="isbnout1" id="isbnout1" placeholder="ISBN">
+    				<input type="text" name="title1" id="title1" placeholder="Title">
+    				<input type="text" name="summary1" id="summary1" placeholder="Summary">
+    				<input type="text" name="author1" id="author1" placeholder="Author">
     			</form>
         <button id="submitBook" onclick="submitBook();"> Submit </button>
       
