--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 			<header class="codrops-header">
 			  <h1>Request a Book</h1>
 				<h1> <span>Find your favorite book.</span></h1>	
-  				<form action="/newUser" method="post">
-  				  <input type="text" name="isbn" id="isbn" placeholder="Search by ISBN">
+  				<form action="" method="post">
   				  <input type="text" name="booktitle" id="booktitle" placeholder="Search by Title">
   				</form>
       			<h2> <span>Insert the ISBN/Title of your book and hit the search button.</span></h2>	
